# zoitechat

./: changelog.rst  meson.build  readme.md  troubleshooting.md
.github/workflows/: appimage-build.yml  flatpak-build.yml  manjaro-package-build.yml
data/: zoitechat.gresource.xml
data/misc/: meson.build  net.zoite.Zoitechat.Plugin.metainfo.xml.in  net.zoite.Zoitechat.appdata.xml.in
flatpak/: net.zoite.Zoitechat.json  perl.json
packaging/manjaro/: PKGBUILD
plugins/perl/: perl.c
plugins/python/: python.py
plugins/sysinfo/: sysinfo-backend.h  sysinfo.c
plugins/sysinfo/unix/: backend.c
plugins/sysinfo/win32/: backend.c
plugins/upd/: upd.c
src/common/: cfgfiles.c  cfgfiles.h  common.vcxproj  common.vcxproj.filters  fe.h  gen-public-suffix.py  gtk3-theme-service.c  gtk3-theme-service.h  inbound.c  inbound.h  meson.build  outbound.c  proto-irc.c  servlist.c  sts.c  theme-service.c  theme-service.h  url.c  zoitechat.c  zoitechat.h
src/common/dbus/: dbus-client.c  dbus-plugin.c  example.c  meson.build
src/fe-gtk/: ascii.c  chanlist.c  chanview-tabs.c  chanview-tree.c  chanview.c  dccgui.c  editlist.c  fe-gtk.c  fe-gtk.h  fe-gtk.vcxproj  fe-gtk.vcxproj.filters  fkeys.c  gtkutil.c  gtkutil.h  icon-resolver.c  icon-resolver.h  joind.c  maingui.c  maingui.h  menu.c  meson.build  notifygui.c  palette.h  plugin-tray.c  plugingui.c  preferences-persistence.c  preferences-persistence.h  rawlog.c  servlistgui.c  setup.c  setup.h  sexy-spell-entry.c  textgui.c  urlgrab.c  userlistgui.c  xtext.c  xtext.h
src/fe-gtk/theme/: theme-access.c  theme-access.h  theme-application.c  theme-application.h  theme-css.c  theme-css.h  theme-gtk.h  theme-manager.c  theme-manager.h  theme-palette.c  theme-palette.h  theme-policy.c  theme-policy.h  theme-preferences.c  theme-preferences.h  theme-runtime.c  theme-runtime.h
src/fe-gtk/theme/tests/: test-theme-access-routing.c  test-theme-application-input-style.c  test-theme-manager-auto-refresh.c  test-theme-manager-dispatch-routing.c  test-theme-manager-policy.c  test-theme-preferences-gtk3-populate.c  test-theme-runtime-persistence.c
src/fe-text/: fe-text.c
tools/: scan-zoitechat-servlist.sh
win32/: version.txt  zoitechat.props
win32/installer/: zoitechat.iss.tt
